@startuml

title __JAVA-LESSON-4's Class Diagram__\n

  namespace abstraction {
    class abstraction.Bicycle {
    }
  }
  

  namespace abstraction {
    class abstraction.Car {
    }
  }
  

  namespace abstraction {
    class abstraction.Lorry {
    }
  }
  

  namespace abstraction {
    class abstraction.Main {
    }
  }
  

  namespace abstraction {
    abstract class abstraction.ManualVehicle {
    }
  }
  

  namespace abstraction {
    abstract class abstraction.MotorisedVehicle {
    }
  }
  

  namespace abstraction {
    abstract class abstraction.Vehicle {
    }
  }
  

  abstraction.Bicycle -up-|> abstraction.ManualVehicle
  abstraction.Car -up-|> abstraction.MotorisedVehicle
  abstraction.Lorry -up-|> abstraction.MotorisedVehicle
  abstraction.ManualVehicle -up-|> abstraction.Vehicle
  abstraction.MotorisedVehicle -up-|> abstraction.Vehicle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
